updated index and about

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            
           <div class="container">
             <nav class="navbar navbar-expand-lg p-0 align-items-center justify-content-between">
-              <a class="site-logo site-title" href="index.php">
+              <a class="site-logo site-title" href="index.html">
                 <img src="assets/images/logoIcon/logo2.png" alt="logo">
             </a>
          
@@ -346,19 +346,19 @@
                  markets, ensuring sustainable growth and success in their business ventures.</p>
             <ul class="social-media-links d-flex align-items-center mt-3">
                               <li>
-                  <a href="https://bd.linkedin.com/" target="_blank">
+                  <a href="##" target="_blank">
                     <i class="fab fa-linkedin-in"></i>                  </a>
                 </li>
                               <li>
-                  <a href="https://www.instagram.com/" target="_blank">
+                  <a href="##" target="_blank">
                     <i class="fab fa-instagram"></i>                  </a>
                 </li>
                               <li>
-                  <a href="https://twitter.com/" target="_blank">
+                  <a href="##" target="_blank">
                     <i class="fab fa-twitter"></i>                  </a>
                 </li>
                               <li>
-                  <a href="https://www.facebook.com/" target="_blank">
+                  <a href="##" target="_blank">
                     <i class="fab fa-facebook-f"></i>                  </a>
                 </li>
                           </ul>
@@ -367,7 +367,7 @@
         <div class="col-lg-2 col-sm-6 order-lg-2 order-3">
           <div class="footer-widget">
             <ul class="short-link-list">
-                <li><a href="about.php">About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
           </div>
         </div>
