updated index and about

--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
             <ul class="social-media-links d-flex align-items-center mt-3">
                               
                               <li>
-                  <a href="" target="_blank">
+                  <a href="https://www.instagram.com/sculpturestrings?igsh=dDM3bDdibDkxdHJ4" target="_blank">
                     <i class="fab fa-instagram"></i>                  </a>
                 </li>
                             
@@ -199,7 +199,7 @@
             <h3 class="footer-widget__title">Contact Us</h3>
             <ul class="footer-info-list">
                                 <li>
-                    <i class="fas fa-envelope"></i>                     <a href="mailto: sculpturestringstrader@gmail.com" p>sculpturestrings@gmail.com</p>
+                    <i class="fas fa-envelope"></i>                     <a href="mailto: sculpturestringstraders@gmail.com" p>sculpturestrings@gmail.com</p>
                 </li>
                                 <li>
                     <i class="fas fa-headphones"></i>                     <a href="http://t.me/SculptureStringsTraders" p>Telegram support:@SculptureStringsTraders</p>
