updated index and about

--- a/index.html
+++ b/index.html
@@ -353,8 +353,10 @@
         <div class="col-lg-4 col-sm-6 order-lg-1 order-1">
           <div class="footer-widget">
             <h3 class="footer-widget__title">About Us</h3>
-            <p>Sculpture Strings Traders specializes in empowering individuals across diverse industries by providing tailored trade solutions. With expert guidance and innovative strategies, we help clients navigate their unique
-                 markets, ensuring sustainable growth and success in their business ventures.</p>
+            <p>Designed for new traders registered via our broker seeking strategies with precision in Pocket Option!<br><br>
+
+              Our Team is dedicated to sculpting profitable trades, focusing on options trading with 
+              a disciplined & analytical approach. [This Channel is 100% free]</p>
             <ul class="social-media-links d-flex align-items-center mt-3">
                               
                               <li>
@@ -368,8 +370,7 @@
           <div class="footer-widget">
             <ul class="short-link-list">
                 <li><a href="about.html">Trading Hints </a></li>
-                <li>Disclaimer:<br>
-                    Our broker/channel/signal is 100% free! Our support team won't message you first! Be safe and gain</li>
+                <li>Disclaimer: Our broker/channel/signal is 100% free! Our support team won't message you first! Be safe and gain</li>
             </ul>
           </div>
         </div>
