updated index and about

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
           <div class="footer-widget">
             <ul class="short-link-list">
                 <li><a href="about.html">Trading Hints </a></li>
-                <li>Disclaimer: Our broker/channel/signal is 100% free!<BR>Our support team won't message you fir<br>t! Be safe and gain</li>
+                <li>Disclaimer: Our broker/channel/signal is 100% free!<BR>Our support team won't message you fir<br>t! Be safe and gain!</li>
             </ul>
           </div>
         </div>
