--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
         <div class="footer-widget">
           <ul class="short-link-list">
               <li><a href="about.html">Trading Hints </a></li>
-              <li>Disclaimer: Our broker/channel/signal is 100% free! <br>Our support team won't message you first!<br> Be safe and gain</li>
+              <li>Disclaimer: Our broker/channel/signal is 100% free! <br>Our support team won't message you first!<br> Be safe and gain!</li>
           </ul>
         </div>
       </div>
